# mentor_V2

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  INGESTA_README.md  MANUAL_MENTOR.md  Makefile  Plan_Update_V2.md  README.md  RELEASE_v0.2.0.md  demo.py  docker-compose.yml  install.ps1  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-local.ps1  update-v2.md
.github/workflows/: cd.yml  ci.yml
api/: main.py
api/routes/: admin.py  chat.py  knowledge.py  voice.py
core/: config.py  supabase_client.py
core/agent/: main_agent.py  router.py
core/ingestion/: __init__.py  models.py  service.py  store.py
core/llm/: provider.py
core/memory/: conversation_memory.py  knowledge_extractor.py  learning_pipeline.py
core/rag/: chunking.py  embeddings.py  indexer.py  retriever.py
core/tools/: consulta_tecnica.py  diagnostico.py  document_parser.py  guia_instalacion.py  registro_incidencia.py  verificacion.py
data/: knowledge_base.json  sample_workers.json
docker/: Dockerfile  docker-compose.yml  prometheus.yml
frontend/: README.md  app.js  index.html  manifest.json  styles.css  sw.js
infra/docker/: Dockerfile.api
scripts/: doctor.py  seed_knowledge.py  setup_supabase.py  smoke_parser.py  test_ingestion.py
src/: main.py
src/api/: auth.py  metrics_endpoint.py  middleware.py  routes.py  schemas.py
src/core/: engine.py  escalation.py  knowledge_base.py  llm_providers.py  memory.py  query_classifier.py  (+2 more)
tests/: conftest.py  test_api.py  test_ingestion_e2e.py  test_parser_unit.py  test_store_unit.py
(+28 files in other folders)
