[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mentor"
version = "1.0.0"
description = "Agente empresarial de consultas y guiado para trabajadores"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.17.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "PyJWT>=2.8.0",
    "supabase>=2.3.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
]
redis = [
    "redis[hiredis]>=5.0.0",
]
dev = [
    "ruff>=0.1.0",
    "black>=23.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
